<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/pergament"
    android:orientation="vertical">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:background="#000000"
        android:gravity="center_horizontal"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            app:srcCompat="@drawable/phase_3" />
    </LinearLayout>



    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:orientation="horizontal"
        android:paddingTop="5dp"
        android:paddingBottom="5dp">

        <TextView
            android:id="@+id/moveFromText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/move_from" />

        <TextView
            android:id="@+id/sourceMoveCountry"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/select_country"
            android:textStyle="bold" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:orientation="horizontal"
        android:paddingTop="5dp"
        android:paddingBottom="5dp">

        <TextView
            android:id="@+id/sentToText"
            android:layout_width="57dp"
            android:layout_height="wrap_content"
            android:text="@string/move_to" />

        <TextView
            android:id="@+id/targetMoveCountry"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/select_country"
            android:textStyle="bold" />
    </LinearLayout>


    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:orientation="horizontal"
        android:paddingTop="5dp"
        android:paddingBottom="5dp">

        <TextView
            android:id="@+id/descriptor_troop"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="left"
            android:text="@string/troops_available" />

        <TextView
            android:id="@+id/troopsAvailableMove"
            android:layout_width="29dp"
            android:layout_height="wrap_content"
            android:background="#BFF83B"
            android:gravity="center|center_horizontal"
            android:text="7"
            android:textStyle="bold" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:orientation="horizontal">

        <Button
            android:id="@+id/plusMoveButton"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:gravity="center"
            android:text="@string/plus" />

        <TextView
            android:id="@+id/nrOfTroopsSelectedMove"
            android:layout_width="47dp"
            android:layout_height="25dp"
            android:background="#BFF83B"
            android:gravity="center"
            android:maxLines="1"
            android:minHeight="40dp"
            android:text="1"
            android:textStyle="bold" />

        <Button
            android:id="@+id/minusMoveButton"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:gravity="center"
            android:text="@string/minus" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:orientation="horizontal">

        <Button
            android:id="@+id/moveButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Move!" />
    </LinearLayout>


    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:orientation="horizontal">

        <Button
            android:id="@+id/cancelMoveButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cancel" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:orientation="horizontal">

        <Button
            android:id="@+id/skipMoveButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/skip_step" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:orientation="horizontal">

        <Button
            android:id="@+id/TestFragmentChangeButton3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="goToNextFragment" />
    </LinearLayout>



</LinearLayout>

